working on regions

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "a-star": "^0.2.0",
     "jquery": "^2.2.2",
+    "jquery-mousewheel": "^3.1.13",
     "noisejs": "^2.1.0",
     "stats.js": "0.0.14-master",
     "three": "^0.76.1"
